--- a/templates/compradeIngresso.html
+++ b/templates/compradeIngresso.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Compra de Ingresso</title>
 </head>
 <body>
 
