--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -2,7 +2,8 @@
 <html lang="Pt-Br">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta name="viewport" content="user-scalable=no">
+    <title>Cadastro</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body class="fundoa">
@@ -17,7 +18,7 @@
         <button id="botaoSub" class="myButton" onclick="SubForm()">Cadastrar</button>
 
     </form>
-
+        <button ><a href="{{url_for('homepage')}}" class="myButton" >Retornar</a></button>
 
     <div class="fundoa">
         <div class="fundobranco">  </div>
