--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SisCon CeV 2022 - home</title>
+    <meta name="viewport" content="user-scalable=no">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
