--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
                   <ul>
                    <li><a href="{{url_for('cadastro')}}">Cadastrar</a></li>
 
-                    <li><a href="{{url_for('filme')}}">Filmes</a></li>
+                    <li><a href="{{url_for('comprar')}}">Comprar ingressos</a></li>
                    <li>
                       <li><a href="{{url_for('login')}}">Login</a></li>
                    </li>
